--- a/style.css
+++ b/style.css
@@ -1,22 +1,29 @@
+html, body {
+    height: 100%;
+}
+
 body {
-    padding:0;
-    margin:0;
+    padding:0px;
+    margin:0px;
+    display:flex;
+    flex-direction: column;
 }
 
 .header {
     background-color: #1F2937;
     display:flex;
     align-items: center;
-    padding: 0 32px;
-    color: #F9FAF8;
+    padding: 0 64px;
+    color: white;
     font-size: 24px;
     font-weight: bold;
-    
+    justify-content: center; 
 }
 
 .header a{
     color:#E5E7EB;
     font-size: 18px;
+    text-decoration: none;
 }
 
 
@@ -28,24 +35,29 @@ body {
     justify-content: start;
 }
 
+
+
 .maincontainer {
     display:flex;
     flex-direction: column;
+    flex: 1 0 auto;
 }
 .main1 {
     background-color: #1F2937;
     display: flex;
     justify-content: center;
     padding: 32px;
+    
 
 }
 
 .leftbox{
-width: 400px;
+width: 500px;
+
 }
 
 .rightbox{
-    width: 400px;    
+    width: 500px;    
     background-color: #8f8f8f;
     display:flex;
     justify-content: center;
@@ -62,22 +74,119 @@ width: 400px;
 }
 .main2{
     display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 16px;
+    
+    
+}
+
+.gallery {
+    display:flex;
+    margin: 15px;
+    flex-wrap: wrap;
+
+}
+
+.sub1 {
+    width: 200px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 25px;
+    align-items: center;
+    text-align: center;
+    gap:5px;
+}
+.gallery img {
+    display: flex;
+    border: 2px solid rgb(83, 83, 94);
+    width: 200px;
+    height: 200px;
+    border-radius: 25px;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(128, 128, 128, 0.623);
+    
     
 }
 
 .main3{
 background-color: #E5E7EB;
 display:flex;
+flex-direction: column;
+align-items: center;
+padding:24px;
+}
+
+.quotebox {
+    padding:20px;
+    border-radius: 32px;
+    display:flex;
+    flex-direction: column;
+    max-width: 600px;
+}
+.quote{
+    font-size: 26px;
+    font-style: italic;
+    font-weight: lighter;
+
+}
+
+.thor {
+    margin-top: 16px;
+    text-align: end;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .main4{
-    display:flex;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    flex:1;
+}
 
+.bottombox {
+    padding:16px 50px;
+    background-color: #3882f6;
+    border-radius:16px;
+    display:flex;
+    color:white;
+    align-items: center;
+    margin: 32px;
+    gap:64px;
+    
+}
+
+.bottombox text{
+    font-size: 16px;
+}
+
+
+button {
+    background-color: #3882f6;
+    color:white;
+    border-radius:5px;
+    width: 96px;
+    height: 32px;
+    font-weight: bold;
+}
+
+
+.buttontop{
+    border: none;
+}
+
+.buttonbottom {
+    border: solid 2px white;
 }
 
 .footer{
+    
     display:flex;
     background-color: #1F2937;
     color:whitesmoke;
     justify-content: center;
+    flex: 1;
 }
