--- a/Learn js/style.css
+++ b/Learn js/style.css
@@ -1,15 +1,40 @@
 html{
-
+background-color: #FAF8F1;
 }
 
 
 body{
 	display:flex;
 	flex-direction:column;
-	align-items:center;
-gap:8px;
-	background-color: lightgrey;
+	margin:0px;
 	
+}
+
+.header{
+	background-color:#c58940;
+	margin: 0%;
+	padding: 10px;
+}
+.headerlist{
+	display:flex;
+	list-style: none;
+	padding:0px;
+	
+	
+	
+}
+
+.rightlist{
+	margin-left: auto;
+	margin-right: 10px;
+}
+
+.practicebox{
+	display:flex;
+	align-items: center;
+	flex-direction: column;
+	align-content: center;
+
 }
 
 button{
@@ -18,16 +43,16 @@ button{
 	flex:1 0 auto;
     color: white;
     text-align: center;
-    background-color : #2980B9;  
+    background-color : #E5BA73;  
     border-radius: 4px;
 }
 button:hover {
     color: white;
-    background-color: #5499C7;
+    background-color: #FAEAB1;
 	
 }
 	
-	
+
 
 	
 
@@ -36,6 +61,9 @@ button:hover {
 	width:70%;
 	height:100%;
 	flex:1 0 auto;
+	border:2px solid black;
+	border-radius: 4px;
+	
 	
 	
 	
@@ -45,7 +73,8 @@ button:hover {
 h1{
 	
 	padding: 15px;
-	background-color:white;
+	background-color:#E5BA73;
+	border-radius: 5px;
 }
 
 p {
@@ -58,7 +87,7 @@ flex:1 1 0;
 .javabox {
 	width:350px;
 	height:150px;
-	background-color:white;
+	background-color:#FAF8F9;
 	display:flex;
 	align-items:center;
 	flex:1 0 auto;
